Some changes to pages/1475264468521.md

--- a/pages/1475264468521.md
+++ b/pages/1475264468521.md
@@ -1,5 +1,6 @@
 ---
 layout: page
-title: "My Page"
+title: My Page
+permalink: /test.html
 ---
-This is a test. ![]({{ site.baseurl }}/)
+This is a test. ![]({{ site.baseurl }}/master/)
